# chirptype

./: .gitignore  README.md  chirptype.py  install.sh  live_stt.py  pyproject.toml  requirements.txt  start.sh
