[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chirptype"
version = "0.1.0"
description = "macOS menu bar dictation powered by parakeet-mlx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.4.0",
    "sounddevice>=0.5.0",
    "pynput>=1.8.0",
    "numpy>=2.0.0",
    "mlx>=0.29.0",
    "rumps>=0.4.0",
]

[project.scripts]
chirptype = "chirptype:main"

[tool.hatch.build.targets.wheel]
include = ["chirptype.py"]
